duniverse/menhirLib.20200211/test/static/good/option2.mly
%token FOO
%start <unit> main

%%

main:
  o = option { o }

option:
  FOO { () }

