duniverse/menhirLib.20200211/test/static/bad/tricky-deep.mly
%%

let main :=
  list(bar

%token FOO
